# rl_deployment_ros

./: .gitignore  .gitmodules  README.md  install_deployment_env.sh  requirement.txt
catkin_ws/src/realrobot_v1/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/realrobot_v1/config/: realrobot_v1.yaml
catkin_ws/src/realrobot_v1/include/: ambot.h  dynamixelClass.h  robot.h  rosClass.h
catkin_ws/src/realrobot_v1/launch/: realrobot_v1.launch
catkin_ws/src/realrobot_v1/src/: ambot.cpp  dynamixelClass.cpp  main.cpp  robot.cpp  rosClass.cpp
catkin_ws/src/realrobot_v1/src/bota/: bota_force_sensor.cpp  bota_force_sensor.h
catkin_ws/src/realrobot_v1/src/imu/include/: imu_vn_100.h
catkin_ws/src/realrobot_v1/src/imu/src/: imu_vn_100.cpp
catkin_ws/src/realrobot_v1/src/utils/: Log.cpp  Log.h
catkin_ws/src/realrobot_v2/: CMakeLists.txt  package.xml
catkin_ws/src/realrobot_v2/config/: realrobot_v2.yaml
catkin_ws/src/realrobot_v2/include/: robot.hpp
catkin_ws/src/realrobot_v2/include/motor/: ambotCRC.h  ambotDriver.hpp  struct.h
catkin_ws/src/realrobot_v2/include/ros/: rosClassV2.h
catkin_ws/src/realrobot_v2/launch/: realrobot_v2.launch
catkin_ws/src/realrobot_v2/src/: main.cpp  robot.cpp
catkin_ws/src/realrobot_v2/src/motor/: ambotCRC.cpp  ambotDriver.cpp
catkin_ws/src/realrobot_v2/src/ros/: rosClassV2.cpp
catkin_ws/src/rlcontroller/: CMakeLists.txt  package.xml
catkin_ws/src/rlcontroller/config/: ambot_env.zsh  ambot_v1_jointspace.yaml  ambot_v2_jointspace.yaml  rlcontroller.yaml
catkin_ws/src/rlcontroller/launch/: rlcontroller.launch
catkin_ws/src/rlcontroller/scripts/: ambot_real.py  ambot_visual_embeddeding.py  load_wtw_policy.py  logger.py  main.py  stbot_reflex2_node.py  test_standup_controller.py
catkin_ws/src/start_robot/: README.md  ambot_auto_start.service  ambot_auto_start.zsh  auto_start_robot.py  init_usb_port.sh  joy_start  link_node_file.sh  show_log  start_realrobot  start_realrobot_v2  start_robot  start_simbot  test_joy
